# dinero-rs

./: .gitignore  .travis.yml  404.html  CHANGELOG.md  Cargo.toml  README.md  differences_with_ledger.html  index.html  journal-file.html  print.html  register-report.html  repl-mode.html  searchindex.js  searchindex.json
.github/workflows/: gh_pages.yml  main.yml  project.yml  tags.yml  test.yml
docs/: book.toml  differences_with_ledger.md
docs/src/: SUMMARY.md  format_expressions.md  journal-file.md  register-report.md  repl-mode.md
examples/: automated.ledger  automated_fail.ledger  demo.ledger  demo_bad.ledger  example_bad_ledgerrc  grammar.rs  tags.ledger  virtual_postings.ledger
scripts/: bench.sh  brew.sh  ci_bump_version.sh  compare.sh  publish_tag.sh
src/: app.rs  commands.rs  default_formats.rs  dinero.rs  error.rs  expressions.pest  filter.rs  lib.rs  list.rs  main.rs  mod.rs  models.rs  parser.rs
src/commands/: accounts.rs  balance.rs  check.rs  commodities.rs  mod.rs  payees.rs  prices.rs  register.rs  roi.rs  statistics.rs
src/grammar/: expressions.pest  grammar.pest  value_expression.pest
src/ledger/: currency.rs  mod.rs  money.rs  transaction.rs
src/lib/: error.rs  filter.rs  list.rs  main.rs  mod.rs
src/lib/commands/: accounts.rs  balance.rs  check.rs  commodities.rs  mod.rs  prices.rs  register.rs
src/lib/ledger/: account.rs  currency.rs  mod.rs  money.rs  transaction.rs
src/lib/models/: account.rs  balance.rs  comment.rs  currency.rs  mod.rs  models.rs  money.rs  price.rs  transaction.rs
src/lib/parser/: account.rs  chars.rs  comment.rs  commodity.rs  include.rs  mod.rs  payee.rs  price.rs  tag.rs  transaction.rs  value_expr.rs
src/lib/parser/tokenizers/: account.rs  comment.rs  commodity.rs  payee.rs  price.rs  tag.rs  (+1 more)
src/models/: account.rs  balance.rs  comment.rs  currency.rs  mod.rs  money.rs  payee.rs  price.rs  transaction.rs
src/parser/: expressions.rs  include.rs  mod.rs  utils.rs  value_expr.rs
src/parser/expressions/: eval_format.rs  functions.rs  node.rs  result.rs
src/parser/tokenizers/: account.rs  comment.rs  commodity.rs  mod.rs  payee.rs  price.rs  tag.rs  transaction.rs
tests/: common.rs  demo.ledger  example_bad_ledgerrc  example_bad_ledgerrc2  example_ledgerrc  include.ledger  include1.ledger  include2.ledger  test_account_names.rs  test_accounts.rs  test_balances.rs  test_commands.rs  test_currency_formats.rs  test_demo.rs  test_exchange.rs  test_expressions.rs  test_failures.rs  test_include.rs  test_prices.rs  test_repl.rs  test_tags.rs
tests/example_files/: automated.ledger  collapse_demo.ledger  demo.ledger  empty_ledgerrc  exchange.ledger  hledger_roi.ledger  include.ledger  prices.ledger  reg_exchange.ledger  roi_fail_currencies.ledger
