[package]
name = "dinero-rs"
version = "0.8.0"
authors = ["Claudio Noguera <claudio.noguera@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "A command line ledger tool"
keywords = ["ledger"]
license = "MIT"
homepage = "https://github.com/frosklis/dinero-rs"
repository = "https://github.com/frosklis/dinero-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dinero"
path = "src/lib/mod.rs"
[[bin]]
name = "dinero"
test = false
bench = false
path = "src/main.rs"
[dependencies]
num = "0.3.1"
glob = "0.3.0"
colored = "2.0.0"
chrono = "0.4.19"
regex = "1"
lazy_static = "1.4.0"
structopt = "0.3.21"
shellexpand = "2.1.0"
