[package]
name = "dinero-rs"
version = "1.0.0"
authors = ["Claudio Noguera <claudio.noguera@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "A command line ledger tool"
keywords = ["ledger", "plaintext-accounting"]
license = "MIT"
homepage = "https://github.com/frosklis/dinero-rs"
repository = "https://github.com/frosklis/dinero-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dinero"
path = "src/mod.rs"
[[bin]]
name = "dinero"
test = false 
bench = false
path = "src/main.rs"

[dependencies]
num = "0.3.1"
glob = "0.3.0"
colored = "2.0.0"
chrono = "0.4.19"
regex = "1"
lazy_static = "1.4.0"
structopt = "0.3.21"
shellexpand = "2.1.0"
two_timer = "2.2.0"
assert_cmd = "1.0.3"
terminal_size = "0.1.16"
pest = "2.0"
pest_derive = "2.0"