[package]
name = "dinero-rs"
version = "0.34.0-dev"
authors = ["Claudio Noguera <claudio.noguera@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "A command line ledger tool"
keywords = ["ledger", "plaintext-accounting"]
license = "MIT"
homepage = "https://github.com/frosklis/dinero-rs"
repository = "https://github.com/frosklis/dinero-rs"
# rust-version = "1.38"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dinero"
path = "src/mod.rs"


[[bin]]
name = "dinero"
test = false 
bench = false
path = "src/dinero.rs"

[dependencies]
num = "0.4.0"
glob = "0.3.0"
colored = "2.0.0"
chrono = "0.4.19"
regex = "1"
lazy_static = "1.4.0"
structopt = "0.3.21"
shellexpand = "2.1.0"
# Two timer depends on pidgin, but with the upgrade to 0.4.1, it breaks
# So I don't let it use pidgin 0.4.1, it has to be 0.4.0
# Corrected in 0.4.2
# pidgin = "=0.4.0"
two_timer = "2.2.0"
terminal_size = "0.1.16"
pest = "2.0"
pest_derive = "2.0"
rustyline = "8.2.0"
shlex = "1.0.0"
prettytable-rs = "0.8.0"

[dev-dependencies]
assert_cmd = "2.0.0"
